--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,64 @@
-/* You can add global styles to this file, and also import other style files */
+:root {
+  --text: #ad6fab;
+  --background: #13001a;
+  --glow: #ffffff;
+}
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  background-color: var(--background);
+  color: var(--text);
+}
+
+body::after {
+  background: url(https://cdn.nhcarrigan.com/banners/fruit.png);
+  background-position: center;
+  background-size: cover;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  opacity: 0.1;
+  pointer-events: none;
+}
+
+/* Markdown Overrides */
+
+markdown pre {
+  max-width: 750px;
+  width: 95%;
+  margin: auto !important;
+}
+
+markdown img {
+  max-width: 100%;
+}
+
+markdown table {
+  margin: auto !important;
+}
+
+markdown th,
+markdown td {
+  border: 1px solid var(--text);
+}
+
+markdown ul,
+markdown ol {
+  list-style-position: inside;
+}
+
+markdown a,
+markdown a:visited {
+  color: var(--text);
+}
