--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,9 +1,9 @@
 <nav>
   <img class="avatar" src="/assets/img/avatar.jpg" alt="" />
   <div class="flex-column">
-    <a routerLink="/">Home</a>
-    <a routerLink="/about">About</a>
-    <a routerLink="/blog">Blog</a>
-    <a routerLink="/contact">Contact</a>
+    <a routerLink="/home" routerLinkActive="nav-active">Home</a>
+    <a routerLink="/about" routerLinkActive="nav-active">About</a>
+    <a routerLink="/blog" routerLinkActive="nav-active">Blog</a>
+    <a routerLink="/contact" routerLinkActive="nav-active">Contact</a>
   </div>
 </nav>
