feat: write some actual copy

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,2 +1,12 @@
 <h1>About Me</h1>
-<p>Just out here doing my thing. 29 🔞🏳️‍🌈</p>
+<p>
+  I currently work as a Systems Administrator. I am looking to further my
+  knowledge in technology so that I can build my skills.
+</p>
+<p>
+  I am looking to transition into more development-focused work, and have been
+  studying various programming languages for that.
+</p>
+<p>Outside of my work, I also enjoy gaming and occasionally streaming.</p>
+<p>I dabble a bit in art as well.</p>
+<p>Naomi is my cute gf :3</p>
