--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,10 +1,10 @@
 <h1>Hi, I'm Fruit Pursuits</h1>
 <img src="/assets/img/avatar.jpg" alt="" />
+<p>Welcome to my profile site.</p>
 <p>
-  I currently work as a Systems Administrator. I am looking to further my
-  knowledge in technology so that I can build my skills.
+  Here you can read about me, see my work, catch up on my personal blog, or find
+  ways to reach out to me.
 </p>
 <p>
-  Currently I am studying for JavaScript, ReactJS, the SSCP, and AWS to help
-  build my skills in the field of cloud management / DevOps engineering.
+  Thanks for taking the time to explore - I look forward to hearing from you.
 </p>
