--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,5 +1,5 @@
 <h1>Contact Me</h1>
-<p>Hey I appreciate you taking the time to come to my links! Find me here:</p>
+<p>Here are the methods you can use to contact me, sorted by preference:</p>
 <a
   class="social"
   *ngFor="let social of data"
