--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -6,4 +6,13 @@
     <a routerLink="/blog" routerLinkActive="nav-active">Blog</a>
     <a routerLink="/contact" routerLinkActive="nav-active">Contact</a>
   </div>
+  <div class="copyright">
+    <p>&copy; 2023</p>
+    <a
+      href="https://naomi.lgbt"
+      target="_blank"
+      rel="noopener noreferrer"
+      >Built with love by Naomi Carrigan</a
+    >
+  </div>
 </nav>
