--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -11,6 +11,14 @@ img {
   display: none;
 }
 
+@media screen and (max-height: 500px) {
+  img {
+    display: block;
+    width: 250px;
+    margin: auto;
+  }
+}
+
 @media screen and (max-width: 750px) {
   img {
     display: block;
