--- a/src/app/nav/nav.component.css
+++ b/src/app/nav/nav.component.css
@@ -1,7 +1,7 @@
 nav {
   width: 250px;
   height: 100vh;
-  position: sticky;
+  position: fixed;
   border-right: 2px solid var(--text);
 }
 
@@ -36,6 +36,35 @@ a:visited {
   border: 1px solid var(--background);
 }
 
+.copyright {
+  position: fixed;
+  bottom: 0;
+  height: 50px;
+}
+
+@media screen and (max-height: 500px) {
+  .avatar {
+    display: none;
+  }
+}
+
+@media screen and (max-height: 200px) {
+  nav {
+    width: 100%;
+    height: 50px;
+    border: none;
+  }
+
+  .flex-column {
+    width: 100%;
+    flex-direction: row;
+  }
+
+  .copyright {
+    display: none;
+  }
+}
+
 @media screen and (max-width: 750px) {
   .avatar {
     display: none;
@@ -50,6 +79,10 @@ a:visited {
   .flex-column {
     width: 100%;
     flex-direction: row;
+  }
+
+  .copyright {
+    display: none;
   }
 }
 
