--- a/src/app/nav/nav.component.css
+++ b/src/app/nav/nav.component.css
@@ -38,8 +38,10 @@ a:visited {
 
 .copyright {
   position: fixed;
-  bottom: 0;
+  bottom: 2rem;
   height: 50px;
+  font-size: 1.5rem;
+  width: 200px;
 }
 
 @media screen and (max-height: 500px) {
@@ -48,7 +50,7 @@ a:visited {
   }
 }
 
-@media screen and (max-height: 200px) {
+@media screen and (max-height: 250px) {
   nav {
     width: 100%;
     height: 50px;
