Chore: Add eslint and prettier

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -8,10 +8,7 @@
   </div>
   <div class="copyright">
     <p>&copy; 2023</p>
-    <a
-      href="https://naomi.lgbt"
-      target="_blank"
-      rel="noopener noreferrer"
+    <a href="https://naomi.lgbt" target="_blank" rel="noopener noreferrer"
       >Built with love by Naomi Carrigan</a
     >
   </div>
